[package]
name = "m7s"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "m7s - m(anifest)s - a tool for helping with the generation of kubernetes manifests"
repository = "https://www.github.com/b-n/m7s"
readme = "README.md"
keywords = ["kubernetes", "manifests", "cli"]
categories = ["command-line-utilities"]

[dependencies]
# Runtime, logging, errors
tokio = { version = "1.47.1", features = ["full"] }
futures = { version = "0.3.31" }
log = { version = "0.4.28" }
env_logger = { version = "0.11.8" }
thiserror = { version = "2.0.16" }
# CLI Parsing
clap = { version = "4.5.47", features = ["derive", "string"] }
# UI
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
tui-textarea = { version = "0.7.0", default-features = false, features = ["crossterm"] }
# Kubernetes & API
kube-client = { version = "2.0.1", features = ["rustls-tls"] }
k8s-openapi = { version = "0.26.0", features = ["v1_30"] } # Required by kube-client
openapiv3 = { version = "2.2.0" }
http = { version = "1.3.1" }
bytes = { version = "1.10.1" }
# Parsing
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
yaml_parser = { version = "0.2.3" }
rowan = { version = "0.16.1"}

[lints.clippy]
all = "warn"
pedantic = "warn"
cargo = "warn"
unknown_lints = "allow"
missing_debug_implementation = "warn"
missing_copy_implementation = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_qualifications = "warn"
variant_size_difference = "warn"
